Fix the layout of the search area to wrap
Make the search area wrap, but also hangle the selector-label group as
one. Moreover, add some margins so that it is not ugly when it wraps.

--- a/styles/trips-look.css
+++ b/styles/trips-look.css
@@ -14,7 +14,19 @@
     box-shadow: 5px 5px 10px black;
 
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.search-area * {
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+}
+
+.selector-group {
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 2em;
 }
 
 .departures {
